added single player component and connected it to the server, added in game menu component

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,4 +2,12 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+    width: max-content;
+}
+
+.single-player-container, .in-menu-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: max-content;
 }
