--- a/client/src/components/button/styles.css
+++ b/client/src/components/button/styles.css
@@ -1,18 +1,19 @@
 .button__container {
-  padding: 15px;
+    padding: 15px;
 
-  user-select: none;
+    user-select: none;
+}
 
-  .button__icon {
+.button__icon {
     position: relative;
 
     padding-right: 15px;
     padding-left: 5px;
 
     font-size: 22px;
-  }
+}
 
-  .button__indicator {
+.button__indicator {
     position: absolute;
     bottom: -5px;
     right: 7px;
@@ -26,16 +27,21 @@
 
     animation: fade 4s ease-in-out infinite;
     opacity: 1;
-  }
 }
 
 .button__container--small {
-  font-size: 18px;
-  padding: 12px;
+    font-size: 18px;
+    padding: 12px;
 }
 
 @keyframes fade {
-  0%   { opacity: 1; }
-  50%  { opacity: .5; }
-  100% { opacity: 1; }
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 1;
+    }
 }
