--- a/client/src/index.css
+++ b/client/src/index.css
@@ -42,9 +42,11 @@ button {
     border-radius: 0.25rem;
     border: 0.0625rem solid darkgrey;
     display: inline-block;
-    padding: 0.5rem 1rem;
+    /* padding: 0.5rem 1rem; */
+    padding: 0.25rem .5rem;
     margin: 0.125rem;
-    width: 7.25rem;
+    /* min-width: 7.25rem; */
+    min-width: 10.25rem;
 
     color: black;
     font-size: 0.75rem;
