--- a/client/src/features/game-menus/game-settings/styles.css
+++ b/client/src/features/game-menus/game-settings/styles.css
@@ -2,7 +2,8 @@
     height: 40px;
     width: 45px;
 
-    background-color: var(--dark-gray);
+    /* background-color: var(--dark-gray); */
+    background: white;
 
     margin-top: 12px;
 
