character moves within world limits and in game menu is on the same page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -46,3 +46,10 @@
   .dropdown:hover .dropdown-content {display: block;}
   
   .dropdown:hover .dropbtn {background-color: #3e8e41;}
+
+  .world-container {
+    padding-top: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    }
