--- a/client/src/index.css
+++ b/client/src/index.css
@@ -40,7 +40,7 @@ button {
     display: inline-block;
     padding: 0.5rem 1rem;
     margin: 0.125rem;
-    width: 7.25rem;
+    min-width: 7.25rem;
 
     color: black;
     font-size: 0.75rem;
