useWalk set to 8

--- a/client/public/test.css
+++ b/client/public/test.css
@@ -6,7 +6,7 @@
 
     /* VDR TESTING */
     /* border-color: lightblue; */
-    border-radius: 0.5rem;
-    border-width: 5px;
+    /* border-radius: 0.5rem;
+    border-width: 5px; */
     /* border-style: solid; */
 }
