--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,76 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.root {
+    position: fixed;
+    top: 0;
+    left: 0;
+    outline: none;
+    position: absolute;
+    z-index: 0;
+}
+
+html,
+body {
+    overflow: hidden;
+    /* background: #4087ff; */
+}
+
+.in-menu-container {
+    position: fixed;
+    top: 2rem;
+    left: 2rem;
+    z-index: 2;
+}
+
+/* Button Styles */
+
+button {
+    user-select: none;
+    display: block;
+    position: relative;
+    cursor: pointer;
+    overflow: hidden;
+    opacity: 1;
+
+    background-color: white;
+    border-radius: 0.25rem;
+    border: 0.0625rem solid darkgrey;
+    display: inline-block;
+    padding: 0.5rem 1rem;
+    margin: 0.125rem;
+    min-width: 7.25rem;
+
+    color: black;
+    font-size: 0.75rem;
+    line-height: 0.25rem;
+    text-align: center;
+    text-decoration: none;
+
+    cursor: default;
+}
+
+button:hover {
+    opacity: 1;
+    background-color: ghostwhite;
+}
+
+button:active {
+    opacity: 1;
+    background: gainsboro;
+    color: inherit;
+}
+
+button:disabled {
+    opacity: 1;
+    background: ghostwhite;
+    color: #dcdcdc;
+    cursor: not-allowed;
+}
+
+/* APP.CSS */
 .user-form {
     display: flex;
     justify-content: center;
@@ -5,7 +78,8 @@
     width: max-content;
 }
 
-.single-player-container, .in-menu-container {
+.single-player-container,
+.in-menu-container {
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -13,42 +87,53 @@
 }
 
 .dropbtn {
-    background-color: #04AA6D;
+    background-color: #04aa6d;
     color: white;
     padding: 16px;
     font-size: 16px;
     border: none;
-  }
-  
-  .dropdown {
+}
+
+.dropdown {
     position: relative;
     display: inline-block;
-  }
-  
-  .dropdown-content {
+}
+
+.dropdown-content {
     display: none;
     position: absolute;
     background-color: #f1f1f1;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
-  }
-  
-  .dropdown-content div {
+}
+
+.dropdown-content div {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-  }
-  
-  .dropdown-content div:hover {background-color: #ddd;}
-  
-  .dropdown:hover .dropdown-content {display: block;}
-  
-  .dropdown:hover .dropbtn {background-color: #3e8e41;}
+}
 
-  .world-container {
+.dropdown-content div:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+}
+
+.world-container {
     display: flex;
     align-items: center;
     justify-content: center;
-    }
+    margin-bottom: -115px;
+}
+
+/* .world {
+    border-radius: 3rem;
+} */
