--- a/client/src/App.css
+++ b/client/src/App.css
@@ -127,7 +127,7 @@ button:disabled {
     background-color: #3e8e41;
 }
 
-.world-container {
+.world-container, .energy-layout-container {
     display: flex;
     align-items: center;
     justify-content: center;
