--- a/client/src/App.css
+++ b/client/src/App.css
@@ -144,6 +144,16 @@ NAV MENUS */
     max-width: 10rem;
 }
 
+.server-response {
+    color: black;
+    font-size: 0.75rem;
+    line-height: 0.95rem;
+    text-align: left;
+
+    padding: 0.5rem;
+    margin: 0.25rem;
+}
+
 /* 
 *******
 *******
