--- a/client/src/App.css
+++ b/client/src/App.css
@@ -203,15 +203,20 @@ PRE-EXISTING MENUS */
 
 .world-container,
 .energy-layout-container {
+    /* width: 640px;
+    height: 640px;
+    margin: 0;
+    padding: 0; */
+
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: -115px;
+    /* margin-bottom: -115px; */
 }
 
-/* .world {
-    border-radius: 3rem;
-} */
+.world {
+    background-color: red;
+}
 
 /* 
 *******
@@ -255,14 +260,24 @@ FORM POSITIONING */
     display: grid;
     justify-items: center;
     align-items: center;
-    width: 100vw;
-    height: 100vh;
     margin: 0;
     padding: 0;
+    width: 100vw;
+    height: 100vh;
+}
+
+.fullscreen-container-grass {
+    width: 640px;
+    height: 640px;
+    margin: 0;
+    padding: 0;
+    display: flex !important;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .login-image {
-    background-image: url("../src/assets/images/titles/world_2.png");
+    background-image: url('../src/assets/images/titles/world_2.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -364,18 +379,32 @@ input[type='password'] {
     vertical-align: middle;
 }
 
-
 /* 
 
 
 
 Game Titlescreen */
 .entry-section {
-    /* border: 5px solid red; */
+    border: 0px solid red;
 }
 
 .game-title {
     /* border: 5px solid red; */
-    margin-top:15rem;
+    margin-top: 15rem;
     margin-bottom: 5rem;
 }
+
+.ground-tile {
+    margin: 0;
+    padding: 0;
+    height: 32px;
+    width: 32px;
+}
+
+/* .wrapper {
+    /* display: flex !important;
+    flex-direction: row;
+    flex-wrap: wrap; 
+    background: red;
+
+} */
