User list view on Admin page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -408,3 +408,14 @@ Game Titlescreen */
     background: red;
 
 } */
+
+.superhero-table {
+    display: flex;
+    justify-content: center;
+}
+  
+.superhero-table th {
+    background-color: grey;
+    color: white;
+    padding: 2px 20px 2px 20px;
+}
