position and add border

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -227,10 +227,10 @@ PRE-EXISTING MENUS */
 *******
 *******
 *******
-GAME WORLD STYLING */
+GAME WORLD POSITIONING */
 /* VDR */
 
-.game-container {
+.world-container {
     display: grid;
     justify-items: center;
     align-items: center;
@@ -242,6 +242,68 @@ GAME WORLD STYLING */
     background-image: url('../src/assets/images/backgrounds/field_bg_lowqual.png');
     background-position: center;
     background-size: cover;
+}
+
+.game-parent-container {
+    display: grid;
+    grid-template-rows: 640px 1fr;
+    gap: 1rem;
+
+    justify-items: center;
+    align-items: center;
+
+    background-color: mediumturquoise;
+}
+
+.game-child {
+    /* background-color: magenta; */
+}
+
+#canvas {
+    position: absolute;
+    display: grid;
+    z-index: 3;
+    overflow: hidden;
+    box-sizing: border-box;
+    border: 1px solid red;
+}
+/* 
+#parent {
+    position: relative;
+} */
+
+.camera {
+    width: 640px;
+    height: 640px;
+    position: absolute;
+    overflow: hidden;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.dialog-box {
+    position: absolute;
+    left: calc(50% - 640px / 2);
+    bottom: 5%;
+    width: 640px;
+    z-index: 1;
+}
+
+.dialog-box div:first-child {
+    /* background-color: hsla(96, 50, 96, 100); */
+    background-color: rgba(245, 251, 240, 100);
+    margin-top: 1.5rem;
+    padding: 1.5rem;
+
+    /* to be prettied: */
+    border: 0.0625rem solid darkgrey;
+    /* display: inline-block; */
+    /* padding: 0.5rem 1rem; */
+    margin: 0.125rem;
+
+    border: 0.0125rem solid rgba(162, 187, 145, 100);
+    border-radius: 0.5rem;
 }
 
 /* 
@@ -397,8 +459,6 @@ input[type='password'] {
 
 /* 
 
-
-
 Game Titlescreen */
 .entry-section {
     border: 0px solid red;
@@ -425,29 +485,6 @@ Game Titlescreen */
     background: red;
 
 } */
-
-.camera {
-    width: 640px;
-    height: 640px;
-    position: absolute;
-    overflow: hidden;
-    top: 45%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-#canvas {
-    position: absolute;
-    display: grid;
-    z-index: 3;
-    overflow: hidden;
-    box-sizing: border-box;
-    border: 1px solid red;
-}
-
-#parent {
-    position: relative;
-}
 
 .superhero-table {
     display: flex;
