Edit user form styles

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -532,6 +532,17 @@ Game Titlescreen */
 
 } */
 
+.admin-container {
+    display: grid;
+    overflow-y: scroll;
+    justify-items: center;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    height: 100vh;
+}
+
 .admin-table {
     display: flex;
     justify-content: center;
@@ -548,15 +559,26 @@ Game Titlescreen */
 .admin-table td, .admin-table th {
     padding: 10px;
     border-radius: 0.5rem;
-  }
+}
 
-  .admin-table td:first-child {
-    text-align: left;
-  }
+.admin-table td:first-child {
+text-align: left;
+}
 
-  .admin-table td:last-child {
-    background-color: white;
-  }
+.admin-table td:last-child {
+background-color: white;
+}
 
+#edit-submit {
+    text-align: center;
+    align-content: center;
+    margin: auto;
+}
+
+.edit-button-container {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    align-items: center;
+}
 .admin-table tr:hover {background-color: rgb(245, 252, 239);}
 
