--- a/client/src/App.css
+++ b/client/src/App.css
@@ -389,7 +389,7 @@ GAME WORLD POSITIONING */
 }
 
 .dialog-padding {
-    padding-left: 100px !important;
+    padding-left: 2rem !important;
     /* background-color: red !important; */
 }
 
@@ -439,6 +439,20 @@ FORM POSITIONING */
     padding: 0;
     width: 100vw;
     height: 100vh;
+}
+
+.welcome-container {
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    height: 100vh;
+
+    background-image: url('../src/assets/images/backgrounds/welcome_bg.png');
+    background-position: center;
+    background-size: cover;
 }
 
 .login-image {
@@ -553,7 +567,7 @@ Game Titlescreen */
 
 .game-title {
     /* border: 5px solid red; */
-    margin-top: 5rem;
+    margin-top: 15rem;
     margin-bottom: -15rem;
 }
 
