--- a/client/src/App.css
+++ b/client/src/App.css
@@ -390,6 +390,50 @@ GAME WORLD POSITIONING */
     z-index: 5;
 }
 
+.animate-hover {
+    /* width: 100px;
+    height: 100px;
+    background-color: #ffe672; */
+    animation-name: bounce-top;
+    animation-duration: 10s;
+    animation-timing-function: ease;
+    animation-delay: 0s;
+    animation-iteration-count: infinite;
+    animation-direction: normal;
+    animation-fill-mode: none;
+}
+@keyframes bounce-top {
+    0% {
+        -webkit-transform: translateY(0px) rotate(-5deg);
+        transform: translateY(-5px) rotate(-5deg);
+    }
+    16% {
+        -webkit-transform: translateY(-5px) rotate(-3.5deg);
+        transform: translateY(-5px) rotate(-3.5deg);
+        /* transform: rotate(-3.5deg);
+        -webkit-transform: rotate(-3.5deg); */
+    }
+    50% {
+        -webkit-transform: translateY(5px) rotate(-3.5deg);
+        transform: translateY(5px) rotate(-3.5deg);
+        /* transform: rotate(-3.5deg);
+        -webkit-transform: rotate(-3.5deg);
+    } */
+    }
+    82% {
+        -webkit-transform: translateY(-5px) rotate(-5deg);
+        transform: translateY(-5px) rotate(-5deg);
+        /* transform: rotate(-7.5deg);
+        -webkit-transform: rotate(-7.5deg); */
+    }
+    100% {
+        -webkit-transform: translateY(-5px) rotate(-5deg);
+        transform: translateY(-5px) rotate(-5deg);
+        /* transform: rotate(-7.5deg);
+        -webkit-transform: rotate(-7.5deg); */
+    }
+}
+
 .dialog-box {
     top: 0px;
     left: 0px;
